css/kaform.css
.ka-input, .ka-fieldset {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 0.5em;
}
.ka-fieldset label, .ka-input label {
    display: block;
    font-size: 0.8em;
    color: var(--foreground-text-color);
    min-width: 12ch;
}

.ka-input input, .ka-input select, .ka-car-select {
    display: block;
    max-width: 100%;
    min-width: 100%;
    background-color: var(--backgroun-input-color);
}

.ka-input input[type="checkbox"] {
    display: inline-block;
    margin: 4px;
    padding: 0;
    font-size: 1em !important;
    min-height: 32px !important;
    min-width: 32px !important;
    background-color: transparent;
}

.ka-input label.ka-checkbox {
    font-size: 1em !important;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    padding: 0;
    margin: 0;
    font-size: 0.8em;
    color: var(--foreground-text-color);
}

.ka-input.multiple {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
}

.ka-fieldset {
    border-top: 1px solid var(--ka-border-button-color);
}

.ka-login-form  {
    margin: 0 auto;
    max-width:max-content;
}
.ka-login-form span.title, .ka-login-form span.description {
    display: flex;
    justify-content: space-around;
    min-height: 4ex;
}

.ka-login-form span.title {
    font-size: 1.2em;
}

.ka-login-form span.description {
    font-weight: bold;
}

.ka-login-form label span {
    margin-right: 15px;
}
.ka-login-form label {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
}

.ka-login-form input[readonly] {
    background-color: var(--ka-input-readonly-bgcolor);
    border: none;
}

@media (max-width: 700px) {
    .ka-login-form {
        min-width: 100%;
    }
    .ka-login-form input {
        min-width: 100%;
    }
    .ka-login-form label{
        flex-direction: column;
        padding: 5px 5px;
        margin-bottom: 20px;
    }
}

